[gd_scene load_steps=6 format=3 uid="uid://ctpqddvtilysj"]

[ext_resource type="Script" path="res://Scenes/Enemies/enemy_ranged_parent.gd" id="1_cnok4"]
[ext_resource type="PackedScene" uid="uid://d2c4ccnfltmr1" path="res://Scenes/Components/Health/health_component.tscn" id="2_3xs1y"]
[ext_resource type="PackedScene" uid="uid://c73ovdjp0q4wx" path="res://Scenes/Components/Velocity/velocity.tscn" id="3_l3our"]
[ext_resource type="PackedScene" uid="uid://bt6sh5hh7awu8" path="res://Scenes/Components/DamageRange/damage_range_component.tscn" id="4_2a1c1"]
[ext_resource type="PackedScene" uid="uid://c8wqavxm6m0q" path="res://Scenes/Components/Hitbox/hitbox_component.tscn" id="5_klnuv"]

[node name="EnemyRangedParent" type="CharacterBody2D"]
z_index = 1
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 8
script = ExtResource("1_cnok4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="DamageRangeComponent" parent="." instance=ExtResource("4_2a1c1")]
unique_name_in_owner = true
timerDuration = 2.0

[node name="Range" type="CollisionShape2D" parent="DamageRangeComponent"]

[node name="Timers" type="Node" parent="."]

[node name="HealthComponent" parent="." instance=ExtResource("2_3xs1y")]
unique_name_in_owner = true

[node name="Velocity" parent="." instance=ExtResource("3_l3our")]
unique_name_in_owner = true

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "hit_box_shape") instance=ExtResource("5_klnuv")]
unique_name_in_owner = true
collision_layer = 128
collision_mask = 80
health_component = NodePath("../HealthComponent")
hit_box_shape = NodePath("Hitbox")
timerDuration = 0.4

[node name="Hitbox" type="CollisionShape2D" parent="HitboxComponent"]

[node name="CharacterBodyShape" type="CollisionShape2D" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="dead" from="HealthComponent" to="." method="_on_health_component_dead"]
